--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,16 +25,16 @@
                     <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/profile">Characters</a>
+                    <a class="nav-link" href="/profile">Profile</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/login">Characters</a>
+                    <a class="nav-link" href="/login">login</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/Register">Characters</a>
+                    <a class="nav-link" href="/Register">Register</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/User">Characters</a>
+                    <a class="nav-link" href="/User">User</a>
                 </li>
             </ul>
         </div>
